fix: 完善 AI 智能对话